--- a/index.html
+++ b/index.html
@@ -36,8 +36,66 @@
             </div>
     </nav>
     <main id="mainD">
-<h1>asdasd</h1>oi
+        <section class="Stable">
+            <h1>Ação</h1>
+            <div id="filaDfilm">
+                <div id="divFilm">
+                    <img src="charlie.png" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="divertida.jpeg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="covard.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="super.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="ursocur.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="hern.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="ded.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="chav.jfif" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="Stable">
+            <h1>Aventura</h1>
+            <div id="filaDfilm">
+                <div id="divFilm">
+                    <img src="Spide-Man_Poster.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="Spider-Man_No_Way_Home_poster.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="roblox.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="mai6.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="socra.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="candidH.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="tdbem.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="jojo.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
