--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             </div>
             <div id="divIMG">
                 <img src="config.png" alt="">
-                <h6>Configurações</h6>
+                <h6>Config.</h6>
             </div>
     </nav>
     <main id="mainD">
+        <div id="imagemjn"><img src="JUNIORFLIX-9-16-2024.png" alt=""></div>
         <section class="Stable">
             <h1>Ação</h1>
-            <div id="filaDfilm">
+            <div id="filaDfilm" class="rodar">
                 <div id="divFilm">
                     <img src="charlie.png" alt="">
                 </div>
@@ -67,7 +68,7 @@
         </section>
         <section class="Stable">
             <h1>Aventura</h1>
-            <div id="filaDfilm">
+            <div id="filaDfilm" class="rodar">
                 <div id="divFilm">
                     <img src="Spide-Man_Poster.jpg" alt="">
                 </div>
@@ -91,6 +92,35 @@
                 </div>
                 <div id="divFilm">
                     <img src="jojo.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="Stable">
+            <h1>Mistérios</h1>
+            <div id="filaDfilm" class="rodar">
+                <div id="divFilm">
+                    <img src="theowl.jpg_large" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="infinit.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="grav.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="o vaz.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="over.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="duk.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="paranorman.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="aise.jpg" alt="">
                 </div>
             </div>
         </section>
