--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="imagemjn"><img src="JUNIORFLIX-9-16-2024.png" alt=""></div>
         <section class="Stable">
             <h1>Ação</h1>
-            <div id="filaDfilm" class="rodar">
+            <div id="filaDfilm">
                 <div id="divFilm">
                     <img src="charlie.png" alt="">
                 </div>
@@ -68,7 +68,7 @@
         </section>
         <section class="Stable">
             <h1>Aventura</h1>
-            <div id="filaDfilm" class="rodar">
+            <div id="filaDfilm">
                 <div id="divFilm">
                     <img src="Spide-Man_Poster.jpg" alt="">
                 </div>
@@ -97,7 +97,7 @@
         </section>
         <section class="Stable">
             <h1>Mistérios</h1>
-            <div id="filaDfilm" class="rodar">
+            <div id="filaDfilm">
                 <div id="divFilm">
                     <img src="theowl.jpg_large" alt="">
                 </div>
