--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
     <link rel="stylesheet" href="Celular.css">
+    <link rel="stylesheet" href="Anim.css">
 </head>
 
 <body>
@@ -37,6 +38,16 @@
     </nav>
     <main id="mainD">
         <div id="imagemjn"><img src="JUNIORFLIX-9-16-2024.png" alt=""></div>
+        <section id="exemplo">
+            <section>
+            <div id="logoSerFil"><img src="logoHenry.png" alt=""></div>
+            <div id="resumo"><p>Henry Hart, de 13 anos, consegue um emprego de meio período como Kid Danger, ajudante do super-herói Capitão Man. As vantagens são fantásticas, mas o garoto precisa manter o show em segredo de seus melhores amigos e da irmã mais nova.</p></div>
+            <h2 id="btn">Assistir</h2>
+            </section>
+            <div id="videoDemo">
+                <img src="henryvid.webp" alt="">
+            </div>
+        </section>
         <section class="Stable">
             <h1>Ação</h1>
             <div id="filaDfilm">
