--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
     </nav>
     <main id="mainD">
-        <div id="imagemjn"><img src="JUNIORFLIX-9-16-2024.png" alt=""></div>
+        <div id="imagemjn"><form action="get"><img src="lupa.png" alt=""><input type="text" name="" id="caixaPesquisa" placeholder="   Pesquisar na Juniors"></form><img src="JUNIORFLIX-9-16-2024.png" alt=""></div>
         <section id="exemplo">
             <section>
             <div id="logoSerFil"><img src="logoHenry.png" alt=""></div>
