--- a/index.html
+++ b/index.html
@@ -23,33 +23,106 @@
             <img src="inici.png" alt="">
             <h6>Início</h6>
         </div>
-            <div id="divIMG">
-                <img src="lupa.png" alt="">
-                <h6>Pesquisar</h6>
-            </div>
-            <div id="divIMG">
-                <img src="tops.png" alt="">
-                <h6>TOPs do Dia</h6>
-            </div>
-            <div id="divIMG">
-                <img src="config.png" alt="">
-                <h6>Config.</h6>
-            </div>
+        <div id="divIMG">
+            <img src="lupa.png" alt="">
+            <h6>Pesquisar</h6>
+        </div>
+        <div id="divIMG">
+            <img src="tops.png" alt="">
+            <h6>TOPs do Dia</h6>
+        </div>
+        <div id="divIMG">
+            <img src="config.png" alt="">
+            <h6>Config.</h6>
+        </div>
     </nav>
+    <div id="imagemjn">
+        <form action="get">
+            <input type="text" name="" id="caixaPesquisa" placeholder="Pesquisar na Juniors">
+        </form>
+        <div id="pequenoIco">
+            <img src="config.png" alt="">
+            <img src="tops.png" alt="">
+            <img src="inici.png" alt="">
+            <img src="usuario.png" alt="">
+        </div>
+        <img src="JUNIORFLIX-9-16-2024.png" alt="" id="Jun">
+    </div>
     <main id="mainD">
-        <div id="imagemjn"><form action="get"><img src="lupa.png" alt=""><input type="text" name="" id="caixaPesquisa" placeholder="   Pesquisar na Juniors"></form><img src="JUNIORFLIX-9-16-2024.png" alt=""></div>
+
+
+
+
+
+
         <section id="exemplo">
-            <section>
-            <div id="logoSerFil"><img src="logoHenry.png" alt=""></div>
-            <div id="resumo"><p>Henry Hart, de 13 anos, consegue um emprego de meio período como Kid Danger, ajudante do super-herói Capitão Man. As vantagens são fantásticas, mas o garoto precisa manter o show em segredo de seus melhores amigos e da irmã mais nova.</p></div>
-            <h2 id="btn">Assistir</h2>
+            <section id="part1">
+                <div id="logoSerFil">
+                    <img src="logoHenry.png" alt="" >
+                </div>
+                <div id="resumo">
+                    <p>Henry Hart, de 13 anos, consegue um emprego de meio período como Kid Danger, ajudante do
+                        super-herói Capitão Man. As vantagens são fantásticas, mas o garoto precisa manter o show em
+                        segredo de seus melhores amigos e da irmã mais nova.</p>
+                </div>
             </section>
             <div id="videoDemo">
                 <img src="henryvid.webp" alt="">
             </div>
+
+
+
+<!-----------
+            <section>
+                <div id="logoSerFil"><img src="logoHenry.png" alt=""></div>
+                <div id="resumo">
+                    <p>Henry Hart, de 13 anos, consegue um emprego de meio período como Kid Danger, ajudante do
+                        super-herói Capitão Man. As vantagens são fantásticas, mas o garoto precisa manter o show em
+                        segredo de seus melhores amigos e da irmã mais nova.</p>
+                </div>
+                <h2 id="btn">Assistir</h2>
+            </section>
+
+
+            <div id="videoDemo">
+                <img src="henryvid.webp" alt="">
+            </div>
+
+
+-->
+
         </section>
         <section class="Stable">
             <h1>Ação</h1>
+            <div id="filaDfilm">
+                <div id="divFilm">
+                    <img src="charlie.png" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="divertida.jpeg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="covard.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="super.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="ursocur.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="hern.webp" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="ded.jpg" alt="">
+                </div>
+                <div id="divFilm">
+                    <img src="chav.jfif" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="Stable">
+            <h1 id="topDia">TOPs Do Dia <img src="tops.png" alt="" id="topIMG"></h1>
             <div id="filaDfilm">
                 <div id="divFilm">
                     <img src="charlie.png" alt="">
