--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
+    <title>JuniorFlix</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="fav.png" type="">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -16,37 +18,35 @@
 <body>
     <nav id="navL">
         <div id="divIMG">
-            <img src="usuario.png" alt="">
+            <img src="icones/usuario.png" alt="">
             <h6>Conta</h6>
         </div>
         <div id="divIMG">
-            <img src="inici.png" alt="">
+            <img src="icones/inici.png" alt="">
             <h6>Início</h6>
         </div>
         <div id="divIMG">
-            <img src="lupa.png" alt="">
+            <img src="icones/lupa.png" alt="">
             <h6>Pesquisar</h6>
         </div>
         <div id="divIMG">
-            <img src="tops.png" alt="">
+            <img src="icones/tops.png" alt="">
             <h6>TOPs do Dia</h6>
         </div>
         <div id="divIMG">
-            <img src="config.png" alt="">
+            <img src="icones/config.png" alt="">
             <h6>Config.</h6>
         </div>
     </nav>
     <div id="imagemjn">
-        <form action="get">
             <input type="text" name="" id="caixaPesquisa" placeholder="Pesquisar na Juniors">
-        </form>
         <div id="pequenoIco">
-            <img src="config.png" alt="">
-            <img src="tops.png" alt="">
-            <img src="inici.png" alt="">
-            <img src="usuario.png" alt="">
+            <img src="icones/config.png" alt="">
+            <img src="icones/tops.png" alt="" id="topsI">
+            <img src="icones/inici.png" alt="" id="homeI">
+            <img src="icones/usuario.png" alt="">
         </div>
-        <img src="JUNIORFLIX-9-16-2024.png" alt="" id="Jun">
+        <img src="icones/JUNIORFLIX-9-16-2024.png" alt="" id="Jun">
     </div>
     <main id="mainD">
 
@@ -58,7 +58,7 @@
         <section id="exemplo">
             <section id="part1">
                 <div id="logoSerFil">
-                    <img src="logoHenry.png" alt="" >
+                    <img src="icones/logoHenry.png" alt="" >
                 </div>
                 <div id="resumo">
                     <p>Henry Hart, de 13 anos, consegue um emprego de meio período como Kid Danger, ajudante do
@@ -67,7 +67,7 @@
                 </div>
             </section>
             <div id="videoDemo">
-                <img src="henryvid.webp" alt="">
+                <img src="imagens/henryvid.webp" alt="">
             </div>
 
 
@@ -96,28 +96,28 @@
             <h1>Ação</h1>
             <div id="filaDfilm">
                 <div id="divFilm">
-                    <img src="charlie.png" alt="">
+                    <img src="imagens/guerra.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="divertida.jpeg" alt="">
+                    <img src="imagens/avatar.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="covard.webp" alt="">
+                    <img src="imagens/guerrainfi.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="super.webp" alt="">
+                    <img src="imagens/velozes.jfif" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="ursocur.webp" alt="">
+                    <img src="imagens/jurassic.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="hern.webp" alt="">
+                    <img src="imagens/spidermanwa.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="ded.jpg" alt="">
+                    <img src="imagens/ded.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="chav.jfif" alt="">
+                    <img src="imagens/blackpa.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -125,28 +125,28 @@
             <h1 id="topDia">TOPs Do Dia <img src="tops.png" alt="" id="topIMG"></h1>
             <div id="filaDfilm">
                 <div id="divFilm">
-                    <img src="charlie.png" alt="">
+                    <img src="imagens/charlie.png" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="divertida.jpeg" alt="">
+                    <img src="imagens/divertida.jpeg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="covard.webp" alt="">
+                    <img src="imagens/covard.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="super.webp" alt="">
+                    <img src="imagens/super.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="ursocur.webp" alt="">
+                    <img src="imagens/ursocur.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="hern.webp" alt="">
+                    <img src="imagens/hern.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="ded.jpg" alt="">
+                    <img src="imagens/ded.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="chav.jfif" alt="">
+                    <img src="imagens/chav.jfif" alt="">
                 </div>
             </div>
         </section>
@@ -154,28 +154,28 @@
             <h1>Aventura</h1>
             <div id="filaDfilm">
                 <div id="divFilm">
-                    <img src="Spide-Man_Poster.jpg" alt="">
+                    <img src="imagens/Spide-Man_Poster.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="Spider-Man_No_Way_Home_poster.jpg" alt="">
+                    <img src="imagens/Spider-Man_No_Way_Home_poster.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="roblox.jpg" alt="">
+                    <img src="imagens/horaDavn.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="mai6.webp" alt="">
+                    <img src="imagens/arcane.png" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="socra.webp" alt="">
+                    <img src="imagens/aVdeChi.jpeg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="candidH.jpg" alt="">
+                    <img src="imagens/Ggran.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="tdbem.jpg" alt="">
+                    <img src="imagens/tdbem.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="jojo.jpg" alt="">
+                    <img src="imagens/jojo.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -183,28 +183,28 @@
             <h1>Mistérios</h1>
             <div id="filaDfilm">
                 <div id="divFilm">
-                    <img src="theowl.jpg_large" alt="">
+                    <img src="imagens/theowl.jpg_large" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="infinit.jpg" alt="">
+                    <img src="imagens/infinit.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="grav.webp" alt="">
+                    <img src="imagens/grav.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="o vaz.webp" alt="">
+                    <img src="imagens/o vaz.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="over.jpg" alt="">
+                    <img src="imagens/over.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="duk.jpg" alt="">
+                    <img src="imagens/duk.jpg" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="paranorman.webp" alt="">
+                    <img src="imagens/paranorman.webp" alt="">
                 </div>
                 <div id="divFilm">
-                    <img src="aise.jpg" alt="">
+                    <img src="imagens/goseB.png" alt="">
                 </div>
             </div>
         </section>
